--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
       <script src="ground.js"></script>
       <script src="sketch.js"></script>
       <script src="boy.js"></script>
-     
+      <script src="mango.js"></script>
       <script src="tree.js"></script>
       <script src="stone.js"></script>
     </head>
     <body>
     </body>
-  </html>
+    </html>
